--- a/package.json
+++ b/package.json
@@ -14,9 +14,22 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "gatsby": "^2.26.1",
+    "@types/node": "^14.14.22",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "canvas-preset": "^3.3.4",
+    "gatsby": "^2.31.1",
+    "gatsby-plugin-react-helmet": "^3.9.0",
+    "gatsby-plugin-sass": "^3.1.0",
+    "gsap": "^3.6.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0",
+    "recoil": "^0.1.2",
+    "recoil-outside": "^0.1.1",
+    "sass": "^1.32.5",
+    "scene-preset": "^1.0.4",
+    "three": "^0.124.0"
   },
   "devDependencies": {
     "prettier": "2.2.1"
