--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-qrious": "^2.4.5",
     "recoil": "^0.1.2",
     "recoil-outside": "^0.1.1",
     "sass": "^1.32.5",
