--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-sass": "^3.1.0",
     "gsap": "^3.6.0",
     "html2canvas": "^1.0.0-rc.7",
+    "qrious": "^4.0.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
